# flask-ecs-cdk

./: Dockerfile  Makefile  README.md  app.py  pyproject.toml
aws_ecs_cdk_template/: aws_ecs_cdk_template_stack.py
cdk/: .gitignore  app.py  cdk.context.json
cdk/ecs_stack/: ecs_stack.py
flask_app/: Dockerfile  flask_app.py  requirements.txt
tests/unit/: test_aws_ecs_cdk_template_stack.py
